sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:30: error: 'while' expected but '}' found.
		} while (swap)
                ^AlgCocktailSort1:30: error: ';' expected but 'while' found.
		} while (swap)
                  ^AlgCocktailSort1:35: error: Unmatched closing brace '}' ignored here
}
^